Update Electron to v38.3.0 and add minimum width bypass
- Upgrade Electron from 31.7.7 to 38.3.0 for latest features and security fixes
- Add preload script to bypass Qobuz minimum width restrictions
- Enable window resizing below 1024px with DOM manipulation and CSS injection
- Update GitHub Actions to support releases on forks with owner-specific tags
- Add reasonable minimum window size constraints (400x300)

💖 Generated with Crush
Co-Authored-By: Crush <crush@charm.land>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -88,17 +88,28 @@ jobs:
       run: |
         echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
         echo "COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        echo "REPO_OWNER=$(echo ${{ github.repository }} | cut -d'/' -f1)" >> $GITHUB_ENV
 
     - name: Create multi-arch Flatpak bundle
       run: |
         flatpak build-bundle final-repo qobuz-linux-${{ env.VERSION }}.flatpak dev.mukkematti.qobuz-linux
 
-    - name: Release Artifacts
+    - name: Release Artifacts (Upstream)
+      if: github.repository == 'mattipunkt/qobuz-linux'
       uses: "softprops/action-gh-release@v2"
       with:
         tag_name: "${{ env.VERSION }}"
         prerelease: true
         name: "Development Build based on commit ${{ env.COMMIT }}"
+        files: qobuz-linux-${{ env.VERSION }}.flatpak
+
+    - name: Release Artifacts (Fork)
+      if: github.repository != 'mattipunkt/qobuz-linux'
+      uses: "softprops/action-gh-release@v2"
+      with:
+        tag_name: "${{ env.VERSION }}-${{ env.REPO_OWNER }}-${{ env.COMMIT }}"
+        prerelease: true
+        name: "Fork Build from ${{ github.repository }} - commit ${{ env.COMMIT }}"
         files: qobuz-linux-${{ env.VERSION }}.flatpak
 
     
